Adding a new look

--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
 	    <link href="./css/boardpage.css" rel="stylesheet">
 	</head>
 	<body class="home">
-		<header>
-			<img src="./images/disparei.png" />
-		</header>
-		<nav>
-			<ul>
-				<li><a href="/company">Our Company</a></li>
-				<li><a href="/brand">Our Brand</a></li>
-			</ul>
-		</nav>
+		<div class="imgBg"></div>
+		<div class="container">
+			<header>
+				<img src="./images/disparei.png" />
+			</header>
+			<nav>
+				<ul>
+					<li><a href="/company">Our Company</a></li>
+					<li><a href="/brand">Our Brand</a></li>
+					<li><a href="/patterns">Our Patterns</a></li>
+				</ul>
+			</nav>
+		</div>
 	</body>
 </html>
